fixed bg not showing on safari browser

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,12 +1,10 @@
 .main {
   background-image: url(../public/banner.jpg);
+  background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: center;
   background-attachment: fixed;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
   height: 100vh;
   margin-bottom: 200px;
 }
